# FastAPI-MyFantasyLeague

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  example.env  pyproject.toml
src/: main.py  utils.py
src/routers/: common_info.py  communications.py  draft_and_auction.py  fantasy_content.py  league_players.py  nfl_content.py  other_league_info.py  scoring_and_results.py  transactions.py  user_functions.py
