[project]
name = "fastapi-myfantasyleague"
version = "0.0.1"
requires-python = ">=3.11"
authors = [
  {name = "Cam Barts", email = "cam@coder.cam"},
]
description = "FastAPI wrapper for myfantasyleague.com"
readme = "README.md"
license = {text = "MIT License"}
keywords = ["myfantasyleague", "fantasy", "football", "fastapi"]
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/cam-barts/FastAPI-MyFantasyLeague"


[tool.ruff]
select = ["ALL"]
ignore = ["EXE002", "TD002", "TD003", "FBT001", "FBT002"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"
[tool.ruff.mccabe]
max-complexity = 7

[tool.ruff.pydocstyle]
# Use Numpy-style docstrings.
convention = "numpy"
